height percentage added

--- a/app/project1/webapp/view/View1.view.xml
+++ b/app/project1/webapp/view/View1.view.xml
@@ -23,7 +23,7 @@
         <VBox id="_IDGenVBox1" class="vPanel">
  
        
-           <Panel id="_IDGenPanel1" class="panel" width="270px" height="600px" >
+           <Panel id="_IDGenPanel1" class="panel" width="270px" height="600%" >
  
            <ObjectListItem id="_IDGenObjectListItem1" intro="" title="General Info" icon="sap-icon://request" ></ObjectListItem>
  
